--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hardhat": "^2.22.9"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2"
+    "@openzeppelin/contracts": "^5.0.2",
+    "ethers": "^6.13.4"
   }
 }
